# paxutils

./: .gitignore  .hgignore  AM-PATCHES  AUTHORS  BACKLOG  CONFIGURE-DIFFS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  PATCHES-AC  PATCHES-AM  PATCHES-BI  README  README-alpha  README.dos  TAR-OLD-INST  THANKS  THANKS~  TODO  acconfig.h  aclocal.m4  backup-specs  buffer.c  config.bat  config.h.in  configure  configure.in  create.c  extract.c  getdate.c  getdate.y  getopt1.c  gnu.c  level-0  level-1  list.c  malloc.c  port.c  (+6 more)
contrib/: ChangeLog  Makefile.am  Makefile.in  README  config.go3  config.sta  cpio.1  lib-makefile.go3  src-makefile.go3  tar.1
contrib/win32/: ChangeLog  Makefile.W32  Makefile.am  Makefile.in  missing.c  missing.h  ndir.h  wnt_dir.c
doc/: ChangeLog  Makefile-DIRO  Makefile.am  Makefile.in  OLDMAN  convtexi.pl  cpio.1  head-cpio.5  head-tar.5  header.texi  help2man  help2man-0  help2man-1  helptoman.pl  mt.1  pax.1  paxutils.info  paxutils.info-1  paxutils.info-2  paxutils.info-3  paxutils.info-4  paxutils.info-5  paxutils.info-6  paxutils.info-7  paxutils.info-8  paxutils.info-9  paxutils.texi  stamp-vti  stamp-vti1  tar.1  tar.1-  texinfo.tex  version.texi
i18n/: ChangeLog  Makefile.am  Makefile.in  cs.mo  cs.po  de.mo  de.po  de.po-  es.mo  es.po  fr.mo  fr.po  it.mo  it.po  ko.mo  ko.po  nl.mo  nl.po  no.mo  no.po  paxutils.pot  pl.mo  pl.po  pt.mo  pt.po  ru.mo  ru.po  sl.mo  sl.po  sv.mo  sv.po
lib/: ChangeLog  Makefile.am  Makefile.in  dirname.c  dstring.c  dstring.h  execlp.c  getdate.c  getopt.c  gettext.c  getversion.c  gmalloc.c  hash.c  hash.h  octal.c  popen.c  popen.h  regex.c  stpncpy.c  tcflush.c  userspec.c  xmalloc.c
lib-cpio/: Makefile.am  ansidecl.h
m4/: ChangeLog  Makefile.am  Makefile.in  echo.m4  gettext.m4  imalloc.m4  printllu.m4
po/: Makefile.in  POTFILES  de.gmo  de.po  fr.gmo  fr.po  pt.gmo  pt.po  sl.po  sv.gmo  sv.po  tar.pot
po-cpio/: Makefile.in  POTFILES  POTFILES.in  cat-id-tbl.c  cpio.pot  de.gmo  de.po  es.gmo  es.po  fr.gmo  fr.po  ko.gmo  ko.po  nl.gmo  nl.po  pl.gmo  pl.po
scripts/: ChangeLog  Makefile.am  Makefile.in  WARNING  backup-specs  backup-specs.1  backup-specs.10  backup-specs.11  dump-remind  dump-remind.1  dump-remind.2  dump-remind.3  dump-remind.4  dump-remind.5  dump-remind.6  dump-remind.8
src/: ChangeLog  Makefile.am  Makefile.in  arith.c  arith.h  buffer.c  cdf.c  common.h  compare.c  copyin.c  copyout.c  copypass.c  cpio.c  cpio.h  create.c  defer.c  defer.h  delete.c  extern.h  extract.c  fmtcpio.c  fmttar.c  format.c  getfile.c  global.c  global.h  global0.c  gnu.c  header.c  incremen.c  list.c  mangle.c  misc.c  msdos.c  mt.c  names.c  open3.c  pax.c  reading.c  rename.c  (+11 more)
tests/: ChangeLog  Makefile.am  Makefile.in  README  README2  TARBUG.m4  TODO  VERIFIES  after  atconfig.in  atgeneral.m4  atlocal.in  before  c-append.m4  c-base.m4  c-block.m4  c-crc.m4  c-default.m4  c-interop.m4  c-junk.m4  c-long-SAUVE  c-long.m4  c-newc.m4  c-nopipe.m4  c-odd.m4  c-oldc.m4  c-owner.m4  c-pass.m4  c-reset.m4  c-skip.m4  c-swap.m4  c-tar.m4  c-unpack.m4  cpiotest  create01.sh  defs.in  delete.m4  echotime.c  exclude.m4  extrac02.sh  (+29 more)
web/: contrib.rst  gabarit.xsl  index.html  site.mk
web/notes/: gabarit.xsl  site.mk
web/src/: THANKS.rst  archives  contrib.rst  download.html  index.html  index.rst  news.html  paxutils.html  readme.html  thanks.html  todo.html
